[package]
name = "infinity_compiler"
version = "0.1.0"
authors = ["Jérôme Plût <plut.jerome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.3"
resources = { path = "resources" }
proc-macro2 = "1.0.49"
