[package]
name = "infinity_compiler"
version = "0.1.0"
authors = ["Jérôme Plût <plut.jerome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
macros = { path = "macros" }
num = "0.4.0"
rusqlite = "0.28.0"
