[package]
name = "infinity_compiler"
version = "0.1.0"
authors = ["Jérôme Plût <plut.jerome@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
extend = "1.1.2"
indicatif = "0.17.3"
lazy_format = "2.0.0"
log = "0.4.17"
macros = { path = "macros" }
mlua = { version = "0.8.7", features = ["lua54"] }
num = "0.4.0"
once_cell = "1.17.1"
rusqlite = "0.28.0"
simplelog = "0.12.0"
tempfile = "3.3.0"
