[package]
name = "macros"
version = "0.1.0"
authors = ["Jérôme Plût <plut.jerome@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.49"
regex = "1.7.1"
extend = "1.1.2"

[lib]
proc-macro = true
